--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,11 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh;
+    height: auto;
     margin: 0;
     background-color: #f0f0f0;
 }
 
 canvas {
-    border: 2px solid black;
+    border: 20px solid #535252;
 }
