--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
     justify-content: center;
     height: auto;
     margin: 0;
-    background-color: #f0f0f0;
+    background-color: #4e5085;
 }
 
 canvas {
